<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:text="@string/repository_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/sixteen_margin"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:textAllCaps="true"
        android:layout_marginBottom="@dimen/sixteen_margin"
        tools:text="@string/repo_name"/>


    <TextView
        android:text="@string/repo_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:textAllCaps="true"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/sixteen_margin"/>

  <TextView
      android:id="@+id/repo_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/eight_dp"
      style="@style/TextAppearance.MaterialComponents.Overline"
      android:layout_marginBottom="@dimen/sixteen_margin"
      tools:text="@string/repo_description"/>

    <TextView
        android:text="@string/forks_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/sixteen_margin"/>

  <TextView
      android:id="@+id/repo_forks_count"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/eight_dp"
      style="@style/TextAppearance.MaterialComponents.Overline"
      android:layout_marginBottom="@dimen/sixteen_margin"
      tools:text="@string/repo_forks_count"/>

    <TextView
        android:text="@string/repo_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/sixteen_margin"/>

  <TextView
      android:id="@+id/repo_created"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/eight_dp"
      style="@style/TextAppearance.MaterialComponents.Overline"
      android:layout_marginBottom="@dimen/sixteen_margin"
      tools:text="@string/repo_created"/>

    <TextView
        android:text="@string/repo_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/sixteen_margin"/>

  <TextView
      android:id="@+id/repo_language"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/eight_dp"
      style="@style/TextAppearance.MaterialComponents.Overline"
      android:layout_marginBottom="@dimen/sixteen_margin"
      tools:text="@string/repo_language"/>


</LinearLayout>