<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/container"
    android:padding="@dimen/sixteen_dp">

    <TextView
        android:id="@+id/counter_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_counter" />

    <Button
        android:id="@+id/btn_counter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintTop_toBottomOf="@id/counter_one" />

    <TextView
        android:id="@+id/counter_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_counter"
        app:layout_constraintTop_toBottomOf="@id/btn_counter1" />

    <Button
        android:id="@+id/btn_counter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintTop_toBottomOf="@id/counter_two" />

    <TextView
        android:id="@+id/counter_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_counter"
        app:layout_constraintTop_toBottomOf="@id/btn_counter2" />

    <Button
        android:id="@+id/btn_counter3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintTop_toBottomOf="@id/counter_three" />
</LinearLayout>